[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mitene_download"
requires-python = ">=3.8"
dependencies = ["aiohttp[speedups]"]
classifiers = ["License :: OSI Approved :: MIT License"]
readme = "README.md"
dynamic = ["description", "version"]

[project.license]
file = "LICENCE"

[project.urls]
Source = "https://github.com/perrinjerome/mitene_download"

[[project.authors]]
name = "Jérome Perrin"

[tool.pylint.messages_control]
disable = "all"
enable = [
    "E",
    "unused-variable",
    "unused-import",
    "unspecified-encoding",
    "unreachable",
    "duplicate-key",
]

[tool.ruff]
indent-width = 2

[tool.tox]
legacy_tox_ini = """
    [tox]
    isolated_build = True
    package = wheel
    env_list =
        py313
        py312
        py311
        py310
        py39
        py38

    [testenv]
    commands = mitene_download --help
"""

[project.scripts]
mitene_download = "mitene_download:main"
